--- a/src/styles/_sendMessage.scss
+++ b/src/styles/_sendMessage.scss
@@ -81,7 +81,7 @@ textarea {
 }
 
 .emojiIcon {
-  line-height: 1;
+  line-height: 1.2;
   /* margin-bottom: 10px; */
 }
 
